<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.prestopizza.MainActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            android:src="@drawable/pizza" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@+id/image"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_margin="10dp"
                android:src="@drawable/pizzaiolo3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/OrderPrice"
                    android:textColor="#000000"
                    android:textSize="18dp" />

                <TextView
                    style="@style/information"
                    android:layout_margin="10dp"
                    android:text="@string/opening" />


                <Button
                    android:layout_width="170dp"
                    android:layout_height="45dp"
                    android:onClick="order"
                    android:text="@string/button"
                    android:textColor="#ffffff" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/description" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary" />

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/information"
                        android:text="@string/app_name"
                        android:textColor="#000000"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <RatingBar
                            android:id="@+id/ratingBar"
                            style="?android:attr/ratingBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:numStars="5"
                            android:rating="3.5"
                            android:stepSize="0.5" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/review"
                            android:textSize="10sp" />
                    </LinearLayout>

                    <TextView
                        style="@style/information"
                        android:text="@string/address" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:orientation="vertical">

                    <TextView
                        style="@style/information"
                        android:text="@string/ContactInformation"
                        android:textColor="#000000"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/information"
                        android:onClick="website"
                        android:text="@string/website" />

                    <TextView
                        style="@style/information"
                        android:onClick="email"
                        android:text="@string/email" />

                    <TextView
                        style="@style/information"
                        android:onClick="phone"
                        android:text="@string/phone" />
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>


</ScrollView>